Z-index problem fixed

--- a/pyconbalkan/core/static/css/components/title.css
+++ b/pyconbalkan/core/static/css/components/title.css
@@ -32,6 +32,7 @@ h3 {
 
 .centered {
     text-align: center;
+    z-index: -1;
 }
 
 .sponsors,
